--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,10 @@ android {
         enabled = true
     }
 
+    kapt {
+        generateStubs = true
+    }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -38,6 +42,10 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+
+
+    implementation 'com.android.support:design:26.1.0'
+    compile 'com.android.support:appcompat-v7:26.1.0'
 
     implementation 'com.squareup.retrofit2:retrofit:2.2.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.4.1'
@@ -59,3 +67,6 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 }
+
+
+apply plugin: 'com.google.gms.google-services'
